--- a/timsseek_cli/Cargo.toml
+++ b/timsseek_cli/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
-name = "timsseek"
+name = "timsseek_cli"
 version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-rustyms = "0.8.3"
+timsseek = { path = "../timsseek" }
 timsquery = { path = "../timsquery" }
+clap = { version = "4.5.17", features = ["derive"] }
 rayon = "1.5"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
@@ -17,3 +18,6 @@ csv = "1.3.0"
 timsrust = "0.4.1"
 indicatif = "0.17.9"
 
+[[bin]]
+name = "timsseek"
+path = "src/main.rs"
