--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 
 [workspace.dependencies]
 # Add shared dependencies here if needed
+tracing = { version = "0.1.40", features = ["log"] }
 
 [profile.release]
 lto = 'thin'
