--- a/deny.toml
+++ b/deny.toml
@@ -74,10 +74,7 @@ db-urls = ["https://github.com/rustsec/advisory-db"]
 yanked = "warn"
 # A list of advisory IDs to ignore. Note that ignored advisories will still
 # output a note when they are encountered.
-ignore = [
-  #"RUSTSEC-0000-0000",
-  "RUSTSEC-2023-0086", # Lexical-core -> arrow issue, updated in main in Sept-2024, unreleased.
-]
+ignore = []
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
 # will still output a note when they are encountered.
@@ -105,9 +102,8 @@ version = 2
 allow = [
   "MIT",
   "Apache-2.0",
-  "Apache-2.0 WITH LLVM-exception",
   "BSD-3-Clause",
-  "Unicode-DFS-2016",
+  "Unicode-3.0",
   "Zlib",
 ]
 
