--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,15 @@ results.json
 **/.DS_Store
 *.code-workspace
 
+
+# Python stuff
+**/__pycache__
+**/*.pyc
+**/*.egg-info
+
+# Test runs stuff
+results*/*.csv
+results*/*.json
+results*/*.parquet
+
+*human*/*.csv
