--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,21 @@ members = [
 ]
 
 [workspace.package]
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 authors = ["Sebastian Paez"]
 license = "MIT"
 
 [workspace.dependencies]
-# Add shared dependencies here if needed
 tracing = { version = "0.1.40", features = ["log"] }
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.122"
+tracing-subscriber = { version = "0.3.18", features = [
+  "registry",
+  "env-filter",
+] }
+timsrust = "=0.4.2"
+rayon = "1.5"
 
 [profile.release]
 lto = 'thin'
