--- a/timsquery/Cargo.toml
+++ b/timsquery/Cargo.toml
@@ -5,29 +5,26 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
-timsrust = "=0.4.2"
-rayon = "1.5"
 nohash-hasher = "=0.2.0"
 indicatif = { version = "0.17.9", features = ["rayon"] }
-
 clap = { version = "4.5.17", features = ["derive"], optional = true }
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.122"
-rmp-serde = "1.3.0"
+tabled = "0.17.0"
 
-tracing = { version = "0.1.40", features = ["log"] }
-tracing-subscriber = { version = "0.3.18", features = [
-  "registry",
-  "env-filter",
-] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-chrome = "0.7.2"
-
 
 # These are only used for benchmarks
 rand = { version = "0.8.5", optional = true }
 rand_chacha = { version = "0.3.1", optional = true }
-tabled = "0.17.0"
+
+# Workspace-inherited deps
+timsrust = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+rayon = { workspace = true }
+
 
 
 [features]
