--- a/timsseek/Cargo.toml
+++ b/timsseek/Cargo.toml
@@ -7,16 +7,16 @@ license = "Apache-2.0"
 [dependencies]
 rustyms = "0.8.3"
 timsquery = { path = "../timsquery" }
-rayon = "1.5"
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.122"
-log = "0.4.22"
-tracing = { version = "0.1.40", features = ["log"] }
-
 regex = "1.10.6"
 csv = "1.3.0"
-timsrust = "0.4.1"
 rusqlite = "0.32.0"
 indicatif = "0.17.9"
+
+# Workspace-inherited deps
+timsrust = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+rayon = { workspace = true }
 
 [lib]
