--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
             rustup target add ${{ matrix.target }}
             for binary in $RELEASE_BINARIES; do
-                cargo build --release --bin $binary --target ${{ matrix.target }}
+                cargo build --release --bin $binary --features="build-binary" --target ${{ matrix.target }}
             done
 
       - name: Prepare binaries
@@ -93,7 +93,7 @@ jobs:
         run: |
             rustup target add ${{ matrix.target }}
             for binary in $RELEASE_BINARIES; do
-                cargo build --release --bin $binary --target ${{ matrix.target }}
+                cargo build --release --bin $binary --features="build-binary" --target ${{ matrix.target }}
             done
 
       - name: Prepare binaries
@@ -131,7 +131,7 @@ jobs:
         run: |
             rustup target add x86_64-pc-windows-msvc
             for binary in $RELEASE_BINARIES; do
-                cargo build --release --bin $binary --target x86_64-pc-windows-msvc
+                cargo build --release --bin $binary --features="build-binary" --target x86_64-pc-windows-msvc
             done
 
       - name: Prepare binaries
