--- a/timsseek_cli/Cargo.toml
+++ b/timsseek_cli/Cargo.toml
@@ -10,13 +10,15 @@ clap = { version = "4.5.17", features = ["derive"] }
 rayon = "1.5"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.122"
-log = "0.4.22"
-env_logger = "0.11.5"
 
 regex = "1.10.6"
 csv = "1.3.0"
 timsrust = "0.4.1"
 indicatif = "0.17.9"
+
+# Workspace-inherited deps
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [[bin]]
 name = "timsseek"
