--- a/timsseek_cli/Cargo.toml
+++ b/timsseek_cli/Cargo.toml
@@ -15,6 +15,7 @@ regex = "1.10.6"
 csv = "1.3.0"
 timsrust = "0.4.1"
 indicatif = "0.17.9"
+# mimalloc = "0.1.43"
 
 # Workspace-inherited deps
 tracing = { workspace = true }
