--- a/timsseek/Cargo.toml
+++ b/timsseek/Cargo.toml
@@ -9,8 +9,10 @@ rustyms = "0.8.3"
 timsquery = { path = "../timsquery" }
 regex = "1.10.6"
 csv = "1.3.0"
-rusqlite = "0.33.0"
+rusqlite = "0.32.0" # Timsrust constrains this dep
 indicatif = "0.17.9"
+parquet_derive = "54.0.0"
+parquet = "54.0.0"
 
 # Workspace-inherited deps
 timsrust = { workspace = true }
