--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,14 @@ license = "MIT"
 [workspace.dependencies]
 tracing = { version = "0.1.40", features = ["log"] }
 serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.135"
+serde_json = "1.0.137"
 tracing-subscriber = { version = "0.3.18", features = [
   "registry",
   "env-filter",
 ] }
 timsrust = "=0.4.2"
 rayon = "1.5"
+clap = { version = "4.5.27", features = ["derive"] }
 
 [profile.release]
 lto = 'thin'
