--- a/timsquery/Cargo.toml
+++ b/timsquery/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "timsquery"
-version = "0.10.3-b4"
+version = "0.10.3-b3"
 edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
 nohash-hasher = "=0.2.0"
 indicatif = { version = "0.17.9", features = ["rayon"] }
-clap = { version = "4.5.17", features = ["derive"], optional = true }
 tabled = "0.17.0"
 
 tracing-bunyan-formatter = "0.3.10"
@@ -18,6 +17,7 @@ rand = { version = "0.8.5", optional = true }
 rand_chacha = { version = "0.3.1", optional = true }
 
 # Workspace-inherited deps
+clap = { workspace = true, features = ["derive"], optional = true }
 timsrust = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
