--- a/timsseek_cli/Cargo.toml
+++ b/timsseek_cli/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [dependencies]
 timsseek = { path = "../timsseek" }
 timsquery = { path = "../timsquery" }
-clap = { version = "4.5.17", features = ["derive"] }
 
 regex = "1.10.6"
 csv = "1.3.0"
@@ -15,6 +14,7 @@ indicatif = "0.17.9"
 # mimalloc = "0.1.43"
 
 # Workspace-inherited deps
+clap = { workspace = true, features = ["derive"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
