feat: changed rt propagation, repr of ions and hyperscore impl

--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ results.json
 
 *summary*/*.png
 *summary*/*.toml
+*summary*/*.parquet
 *human*/*.csv
 *human*/*.parquet
 *human*/*.png
 *hela*/*.parquet
 *hela*/*.csv
 *hela*/*.png
+*search_results*/*
