--- a/timsquery/Cargo.toml
+++ b/timsquery/Cargo.toml
@@ -19,7 +19,7 @@ rand_chacha = { version = "0.3.1", optional = true }
 # Workspace-inherited deps
 clap = { workspace = true, features = ["derive"], optional = true }
 timsrust = { workspace = true }
-serde = { workspace = true }
+serde = { workspace = true, features = ["rc"] }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
