--- a/timsseek/Cargo.toml
+++ b/timsseek/Cargo.toml
@@ -10,9 +10,8 @@ timsquery = { path = "../timsquery" }
 regex = "1.10.6"
 csv = "1.3.0"
 rusqlite = "0.32.0" # Timsrust constrains this dep
-indicatif = "0.17.9"
-parquet_derive = "54.0.0"
-parquet = "54.0.0"
+parquet_derive = "54.2.0"
+parquet = "54.2.0"
 
 # Workspace-inherited deps
 timsrust = { workspace = true }
@@ -20,6 +19,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 rayon = { workspace = true }
+indicatif = { workspace = true }
 
 
 [lib]
