--- a/timsseek_cli/Cargo.toml
+++ b/timsseek_cli/Cargo.toml
@@ -10,7 +10,6 @@ timsquery = { path = "../timsquery" }
 regex = "1.10.6"
 csv = "1.3.0"
 timsrust = "0.4.1"
-indicatif = "0.17.9"
 # mimalloc = "0.1.43"
 
 # Workspace-inherited deps
@@ -20,6 +19,7 @@ tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 rayon = { workspace = true }
+indicatif = { workspace = true }
 
 [[bin]]
 name = "timsseek"
