--- a/timsseek_rts/Cargo.toml
+++ b/timsseek_rts/Cargo.toml
@@ -11,7 +11,6 @@ tracing-bunyan-formatter = "0.3.10"
 regex = "1.10.6"
 csv = "1.3.0"
 timsrust = "0.4.1"
-indicatif = "0.17.9"
 
 # Workspace-inherited deps
 tracing = { workspace = true }
@@ -23,6 +22,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 rayon = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
+indicatif = { workspace = true }
 
 [[bin]]
 name = "timsseek_rts"
