--- a/timsseek/Cargo.toml
+++ b/timsseek/Cargo.toml
@@ -11,7 +11,6 @@ regex = "1.10.6"
 csv = "1.3.0"
 rusqlite = "0.32.0" # Timsrust constrains this dep
 parquet_derive = "54.2.0"
-parquet = "54.2.0"
 
 # Workspace-inherited deps
 timsrust = { workspace = true }
@@ -20,6 +19,7 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 rayon = { workspace = true }
 indicatif = { workspace = true }
+parquet = { workspace = true }
 
 
 [lib]
