--- a/timsseek_cli/Cargo.toml
+++ b/timsseek_cli/Cargo.toml
@@ -7,9 +7,8 @@ edition = "2021"
 timsseek = { path = "../timsseek" }
 timsquery = { path = "../timsquery" }
 
-regex = "1.10.6"
+regex = "1.11.1"
 csv = "1.3.0"
-timsrust = "0.4.1"
 # mimalloc = "0.1.43"
 
 # Workspace-inherited deps
@@ -20,6 +19,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 rayon = { workspace = true }
 indicatif = { workspace = true }
+timsrust = { workspace = true }
 
 [[bin]]
 name = "timsseek"
