--- a/rust/timsquery/Cargo.toml
+++ b/rust/timsquery/Cargo.toml
@@ -36,18 +36,14 @@ bench = ["dep:rand", "dep:rand_chacha"]
 name = "timsquery"
 required-features = ["build-binary"]
 
-[[bench]]
-bench = true
-name = "benchmark_indices"
-path = "benches/benchmark_indices.rs"
-required-features = ["bench"]
+# [[bench]]
+# bench = true
+# name = "benchmark_indices"
+# path = "benches/benchmark_indices.rs"
+# required-features = ["bench"]
 
 [[bench]]
 bench = true
 name = "benchmark_centroiding"
 path = "benches/benchmark_centroiding.rs"
 
-[[bin]]
-bench = true
-name = "benchmark_aggregators"
-path = "benches/benchmark_aggregators.rs"
