wip, refactor: almost there ... prop in scoring logic ...

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,7 +31,8 @@ tasks:
 
   todos:
     cmds:
-      - grep -H -R TODO tims*/src
+      - grep -nH -R TODO rust/tims*/src
+      - grep -nH -R "todo!" rust/tims*/src
 
   build_python:
     cmds:
