--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -18,7 +18,7 @@ tasks:
 
   fmt:
     cmds:
-      - cargo +nightly fmt
+      - cargo +nightly fmt --verbose
       - uv run ruff format
 
   clippy:
