--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.13.0-b0"
+version = "0.14.0"
 edition = "2024"
 authors = ["Sebastian Paez"]
 license = "MIT"
