--- a/python/timsseek_rescore/pyproject.toml
+++ b/python/timsseek_rescore/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "timsseek_rescore"
-version = "0.15.0-rc0"
+version = "0.16.0"
 requires-python = ">=3.11,<3.13"
 dependencies = [
   "polars",
