--- a/python/timsseek_rts_receiver/pyproject.toml
+++ b/python/timsseek_rts_receiver/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "timsseek_rts_receiver"
-version = "0.15.0-rc0"
+version = "0.16.0"
 requires-python = ">=3.11,<3.13"
 description = "Add your description here"
 dependencies = [
