--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,11 +4,9 @@ on:
   pull_request:
     branches:
       - main
-  workflow_run:
-    workflows: ["Release"]
-    types: [completed]
-    branches:
-      - main
+  push:
+    tags:
+      - 'v?[0-9]+.*'
 
 env:
   REGISTRY: ghcr.io
@@ -17,12 +15,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.event == 'release')
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.workflow_run.head_sha || github.ref }}
 
       - name: Get Cargo toolchain
         uses: actions-rs/toolchain@v1
@@ -52,8 +47,8 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Login to the GitHub Container Registry
-        # Only login and push if this workflow was triggered by a successful workflow_run of a release
-        if: github.event_name == 'workflow_run' && github.event.workflow_run.event == 'release'
+        # Only login if it's a release event
+        if: github.event_name == 'release'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.REGISTRY }}
@@ -65,21 +60,9 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          # The docker/metadata-action is smart enough to extract the original release tag
-          # from `github.event.workflow_run.event.release.tag_name` when triggered by workflow_run
-          # and the original event was a release.
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,format=long # This will be used for pull_requests
-            # For workflow_run triggered by a release, this action automatically gets the release tag.
 
       - name: Build and Push the Docker image to the GHCR
-        # Only push if it's a workflow_run triggered by a release
-        if: github.event_name == 'workflow_run' && github.event.workflow_run.event == 'release'
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -87,7 +70,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
+      
       - name: Build the Docker image (without pushing)
         # Build but don't push on pull requests
         if: github.event_name == 'pull_request'
