--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ env:
   CARGO_TERM_COLOR: always
   # Define the binaries to package
   # TODO: use our taskfile to centralize the build
-  RELEASE_BINARIES: timsseek # timsquery timsseek_rts
+  RELEASE_BINARIES: timsseek timsquery #  timsseek_rts
 
 jobs:
   create-release:
@@ -153,3 +153,4 @@ jobs:
   #         asset_path: x86_64-pc-windows-msvc.tar.gz
   #         asset_name: x86_64-pc-windows-msvc.tar.gz
   #         asset_content_type: application/gzip
+  
