--- a/rust/timsquery/Cargo.toml
+++ b/rust/timsquery/Cargo.toml
@@ -47,3 +47,5 @@ bench = true
 name = "benchmark_centroiding"
 path = "benches/benchmark_centroiding.rs"
 
+[target.'cfg(windows)'.dependencies]
+mimalloc = { workspace = true, features = ["secure"] }
