--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -10,7 +10,9 @@ timsquery = { path = "../timsquery" }
 regex = "1.10.6"
 csv = "1.3.0"
 rusqlite = "0.32.0" # Timsrust constrains this dep
-parquet_derive = "54.2.0"
+parquet_derive = "55.2.0"
+rmp-serde = "1.1"
+zstd = "0.13"
 
 # Workspace-inherited deps
 timsrust = { workspace = true }
