--- a/rust/timsquery/Cargo.toml
+++ b/rust/timsquery/Cargo.toml
@@ -11,9 +11,8 @@ tabled = "0.17.0"
 tracing-bunyan-formatter = "0.3.10"
 tracing-chrome = "0.7.2"
 
-# These are only used for benchmarks
-rand = { version = "0.8.5", optional = true }
-rand_chacha = { version = "0.3.1", optional = true }
+# Workspace member deps
+timscentroid = { path = "../timscentroid" }
 
 # Workspace-inherited deps
 clap = { workspace = true, features = ["derive"], optional = true }
@@ -24,28 +23,17 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 rayon = { workspace = true }
 indicatif = { workspace = true, features = ["rayon"] }
+half = { workspace = true }
 
 [features]
 clap = ["dep:clap"]
 build-binary = ["clap"]
-bench = ["dep:rand", "dep:rand_chacha"]
 
 [lib]
 
 [[bin]]
 name = "timsquery"
 required-features = ["build-binary"]
-
-# [[bench]]
-# bench = true
-# name = "benchmark_indices"
-# path = "benches/benchmark_indices.rs"
-# required-features = ["bench"]
-
-[[bench]]
-bench = true
-name = "benchmark_centroiding"
-path = "benches/benchmark_centroiding.rs"
 
 [target.'cfg(windows)'.dependencies]
 mimalloc = { workspace = true, features = ["secure"] }
