--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -6,23 +6,32 @@ license = "Apache-2.0"
 
 [dependencies]
 rustyms = "0.8.3"
-timsquery = { path = "../timsquery" }
 regex = "1.10.6"
 csv = "1.3.0"
-rusqlite = "0.32.0" # Timsrust constrains this dep
-parquet_derive = "55.2.0"
+parquet_derive = "56.1"
 rmp-serde = "1.1"
 zstd = "0.13"
+arrayvec = "0.7.6"
+
+# Gradient boosted tree
+forust-ml = "0.4.8"
+rand = "0.9.2"
+
+
+# Workspace member deps
+timsquery = { path = "../timsquery" }
 
 # Workspace-inherited deps
 timsrust = { workspace = true }
+rusqlite = {workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
 rayon = { workspace = true }
 indicatif = { workspace = true }
 parquet = { workspace = true }
-arrayvec = "0.7.6"
+# This is a test only dependency ...
+tracing-subscriber = { workspace = true }
 
 
 [lib]
