--- a/rust/timsseek_rts/Cargo.toml
+++ b/rust/timsseek_rts/Cargo.toml
@@ -10,9 +10,9 @@ tracing-bunyan-formatter = "0.3.10"
 
 regex = "1.10.6"
 csv = "1.3.0"
-timsrust = "0.4.1"
 
 # Workspace-inherited deps
+timsrust = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = [
   "registry",
