--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -10,13 +10,13 @@ regex = "1.10.6"
 csv = "1.3.0"
 parquet_derive = "56.1"
 rmp-serde = "1.1"
-zstd = "0.13"
 arrayvec = "0.7.6"
+bincode = "1.3"
+zstd = "0.13"
 
 # Gradient boosted tree
 forust-ml = "0.4.8"
 rand = "0.9.2"
-
 
 # Workspace member deps
 timsquery = { path = "../timsquery" }
