--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "rust/calib_rt",
     "rust/timscentroid",
     "rust/timsseek",
     "rust/timsseek_cli",
