--- a/rust/calibrt/Cargo.toml
+++ b/rust/calibrt/Cargo.toml
@@ -9,5 +9,9 @@ rand = "0.8.5" # Used for generating sample data in the example
 serde = { workspace = true }
 tracing = { workspace = true }
 
+[dev-dependencies]
+tracing-subscriber = { workspace = true }
+
 [lib]
+
 
