--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "timsseek"
-version = "0.20.0"
+version.workspace = true
 edition = "2021"
 license = "Apache-2.0"
 
@@ -11,7 +11,6 @@ csv = "1.3.0"
 parquet_derive = "56.1"
 rmp-serde = "1.1"
 arrayvec = "0.7.6"
-bincode = "1.3"
 zstd = "0.13"
 
 # Gradient boosted tree
