refactor: break up timsquery::main

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ env:
   CARGO_TERM_COLOR: always
   # Define the binaries to package
   # TODO: use our taskfile to centralize the build
-  RELEASE_BINARIES: timsseek timsquery #  timsseek_rts
+  RELEASE_BINARIES: timsseek timsquery_cli #  timsseek_rts
 
 jobs:
   create-release:
@@ -49,7 +49,7 @@ jobs:
         run: |
             rustup target add ${{ matrix.target }}
             for binary in $RELEASE_BINARIES; do
-                cargo build --release --bin $binary --features="build-binary" --target ${{ matrix.target }}
+                cargo build --release --bin $binary --target ${{ matrix.target }}
             done
 
       - name: Prepare binaries
@@ -93,7 +93,7 @@ jobs:
         run: |
             rustup target add ${{ matrix.target }}
             for binary in $RELEASE_BINARIES; do
-                cargo build --release --bin $binary --features="build-binary" --target ${{ matrix.target }}
+                cargo build --release --bin $binary --target ${{ matrix.target }}
             done
 
       - name: Prepare binaries
