--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -47,7 +47,7 @@ tasks:
   docker:
     cmds:
       # - cargo install cross --git https://github.com/cross-rs/cross
-      - cross build --release --target x86_64-unknown-linux-gnu --features build-binary --bin timsquery
+      - cross build --release --target x86_64-unknown-linux-gnu --bin timsquery_cli
       - cross build --release --target x86_64-unknown-linux-gnu --bin timsseek
       - docker build --platform linux/amd64 -t timsseek:local .
 
