--- a/deny.toml
+++ b/deny.toml
@@ -49,9 +49,7 @@ all-features = false
 no-default-features = false
 # If set, these feature will be enabled when collecting metadata. If `--features`
 # is specified on the cmd line they will take precedence over this option.
-features = [
-  "build-binary",
-]
+features = []
 
 [output]
 # When outputting inclusion graphs in diagnostics that include features, this
@@ -105,6 +103,7 @@ allow = [
   "BSD-3-Clause",
   "Unicode-3.0",
   "Zlib",
+  "ISC",
 ]
 
 # The confidence threshold for detecting a license from license text.
