--- a/rust/timsseek_rts/Cargo.toml
+++ b/rust/timsseek_rts/Cargo.toml
@@ -2,6 +2,7 @@
 name = "timsseek_rts"
 version.workspace = true
 edition = "2021"
+license.workspace = true
 
 [dependencies]
 timsseek = { path = "../timsseek" }
