Cascade/break up timsquery main (#42)
* chore: code cleanup

* refactor: break up timsquery::main

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,12 @@ members = [
     "rust/timsseek",
     "rust/timsseek_cli",
     "rust/timsseek_rts",
-    "rust/timsquery"
+    "rust/timsquery",
+    "rust/timsquery_cli"
 ]
 
 [workspace.package]
-version = "0.20.0"
+version = "0.20.1"
 edition = "2024"
 authors = ["Sebastian Paez"]
 license = "MIT"
