--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
 version = "0.20.1"
 edition = "2024"
 authors = ["Sebastian Paez"]
-license = "MIT"
+license = "Apache-2.0"
 
 [workspace.dependencies]
 half = "2.6"
