--- a/rust/calibrt/Cargo.toml
+++ b/rust/calibrt/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "calibrt"
 version.workspace = true
-edition = "2021"
-license = "Apache-2.0"
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 rand = "0.8.5" # Used for generating sample data in the example
