--- a/rust/timscentroid/Cargo.toml
+++ b/rust/timscentroid/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "timscentroid"
 version.workspace = true
-edition = "2024"
+edition.workspace = true
 license.workspace = true
 
 [dependencies]
