--- a/rust/timsquery/Cargo.toml
+++ b/rust/timsquery/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "timsquery"
 version.workspace = true
-edition = "2021"
-license = "Apache-2.0"
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 nohash-hasher = "=0.2.0"
