--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "timsseek"
 version.workspace = true
-edition = "2021"
-license = "Apache-2.0"
+edition.workspace = true
+license.workspace = true
 
 [dependencies]
 rustyms = "0.8.3"
