--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "rust/calibrt",
+    "rust/micromzpaf",
     "rust/timscentroid",
     "rust/timsseek",
     "rust/timsseek_cli",
@@ -35,6 +36,7 @@ parquet = { version = "56.1" }
 mimalloc = { version = "0.1.46", features = ["secure"] }
 thiserror = "2"
 insta = { version = "1.34.0" }
+rustyms = "0.8.3"
 
 [profile.release]
 lto = 'thin'
