--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -5,7 +5,6 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-rustyms = "0.8.3"
 regex = "1.10.6"
 csv = "1.3.0"
 parquet_derive = "56.1"
@@ -20,8 +19,10 @@ rand = "0.9.2"
 # Workspace member deps
 timsquery = { path = "../timsquery" }
 calibrt = { path = "../calibrt" }
+micromzpaf = { path = "../micromzpaf" }
 
 # Workspace-inherited deps
+rustyms = { workspace = true }
 timsrust = { workspace = true }
 rusqlite = {workspace = true }
 serde = { workspace = true }
